Restore original DB client code (with some minor modifications)